# messaging_service

./: .env.example  Cargo.toml
api/: Cargo.toml
api/src/: config.rs  error.rs  main.rs  routes.rs
api/src/middleware/: logging.rs
cli/: Cargo.toml
cli/src/: main.rs
clicksend_lib/: Cargo.toml
clicksend_lib/src/: error.rs  lib.rs
clicksend_lib/src/messaging/: mod.rs
